@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.download.oneddl"
        name="OneDDL.com"
-       version="0.2.1"
+       version="0.2.2"
        provider-name="pgoeri">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
